--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="game_container">
             <div style="width:320px; position: absolute; top: 320px; left: 320px;">
                 <a href="https://www.moneypot.com/apps/1134-findabit" target="_blank" rel="external nofollow">Moneypot</a> | 
-                
+                <a href="https://untitled-mines.github.io/index.html" target="_blank" rel="external nofollow">Faucet</a>
                 <a class="settingsButon" style="float:right;" onclick="showSettings();"><i class="settings icon"></i></a>
             </div>
             <div id="chat">
