--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div id="game_container">
             <div style="width:320px; position: absolute; top: 320px; left: 320px;">
                 <a href="https://www.moneypot.com/apps/1134-findabit" target="_blank" rel="external nofollow">Moneypot</a> | 
-                <a href="http://untitled-mines.github.io/untitled-faucet" target="_blank" rel="external nofollow">Faucet</a>
+                <a href="http://pastebin.com/raw/yvjau2Mf" target="_blank" rel="external nofollow">Advertising</a> |
+                <a href="http://pastebin.com/raw/hJYey7mT" target="_blank" rel="external nofollow">HowToPlay</a>
                 <a class="settingsButon" style="float:right;" onclick="showSettings();"><i class="settings icon"></i></a>
             </div>
             <div id="chat">
